overflow fix for gallery

--- a/include/css/default_gallery.css
+++ b/include/css/default_gallery.css
@@ -12,11 +12,14 @@
 
 /* ### no theme or .gallery-theme-default ### */
 
+body.gpAdmin .gp_gallery{
+	overflow:auto!important; /* for gallery display in admin content */
+	}
+
 .gp_gallery{
 	display:block;
 	position:relative;
 	clear:both;
-	overflow:auto!important; /* for gallery display in admin content */
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
@@ -34,6 +37,7 @@
 	margin:0;
 	padding:0;
 	background:none transparent;
+	max-width:100%;
 	}
 
 .gp_gallery a.gallery_gallery, .gp_gallery a.gallery_gallery:link,
@@ -54,6 +58,7 @@
 	padding:0;
 	vertical-align:middle;
 	height:auto; 
+	max-width:100%;
 	}
 
 .gp_gallery div, /* for backwards compat */
